# argos-scada

./: Makefile  Makefile.am  Makefile.in  README.md  configure  configure.in  libtool  makeinclude  makeinclude.in  reconf
DAT/: mbEmulator.json
INCLUDE/: argos.h
SOURCE/: Makefile
SOURCE/DEVICE_DRIVERS/: Makefile
SOURCE/DEVICE_DRIVERS/MODBUS/: Makefile
SOURCE/DEVICE_DRIVERS/MODBUS/MODBUS_EMULATOR/: Makefile  as-mbEmulator.c
SOURCE/DEVICE_DRIVERS/MODBUS/MODBUS_EMULATOR_TEST/: Makefile  emulatorStressTest.tcl  mbEmulatorTest.c
SOURCE/UTILITIES/: Makefile
SOURCE/UTILITIES/JSON/: Makefile  json_NavigatePath.c  json_alloc_token.c  json_arrayStep.c  json_array_length.c  json_buildDom.c  json_each.c  json_error_string.c  json_extract.c  json_fill_token.c  json_finalize.c  json_findChildrenOf.c  json_getNVpairs.c  json_getTokenValue.c  json_init.c  json_loadDom.c  json_objectStep.c  json_parse.c  json_parse_primitive.c  json_parse_string.c  json_saveDom.c  json_squeezer.c  json_static_data.c  json_tokenName.c  json_tokenizer.c  json_tree.c  json_type.c  json_valid.c  json_validator.c  json_walkTree.c  privateJsonHeader.h  publicJsonHeader.h
SOURCE/UTILITIES/MODBUS/: Makefile
config/: alarmas-dev.xml  alarmas.xml  as-bd.run  as-cliente.run  as-clx_ethip.run  as-clx_ethip_ps.run  as-datos.run  as-escaner.run  as-escritor.run  as-mbtcp.run  as-registrador.run  cliente_datos.xml  dispositivos-dev.xml  dispositivos.xml  historicos.xml
config/env/: PATH
driver/: Makefile  Makefile.am  Makefile.in
driver/eip_ps/: Makefile  Makefile.in
driver/eip_ps/include/: as-ethip_ps.h  as-ethip_ps.h.save
driver/eip_ps/src/: Makefile  Makefile.am  Makefile.am.save  Makefile.in  as-clx_ethip_ps.cpp  as-clx_ethip_ps.cpp.save
driver/modbus/: Makefile  Makefile.in
driver/modbus/include/: as-mbtcp.h
driver/modbus/src/: Makefile  Makefile.am  Makefile.in  as-emulmbtcp.cpp  as-mbtcp.cpp  as-mbtcp.cpp.save
driver/proyectos/opto22/bootp/: bat  enetbootp.c  enetbootp.cfg  enetbootp.h  readme
driver/proyectos/opto22/snapenetdtk_R20a/: readme.txt
driver/proyectos/opto22/snapenetdtk_R20a/Examples/C++/Linux/eiocl/: EioclTest.txt  eiocl.cpp  makeit
driver/proyectos/opto22/snapenetdtk_R20a/Examples/C++/Linux/eiocon/: eiocon.cpp  makeit
driver/proyectos/opto22/snapenetdtk_R20a/Source/C++/: O22SIOMM.cpp  O22SIOMM.h  O22SIOST.cpp  O22SIOST.h  O22SIOUT.cpp  O22SIOUT.h  O22STRCT.h
driver/tuxeip/: Makefile  Makefile.in  Makefile_old
driver/tuxeip/include/: AB.h  CIP_Types.h  LGX.h  SendData.h  TuxEip.h  as-clx_ethip.h
driver/tuxeip/src/: CIP_IOI.c  Ethernet_IP.c  LGX.c  MR.c  Makefile  Makefile.am  Makefile.in  PLC.c  SendData.c  as-clx_ethip.cpp  as-clx_ethip.cpp.save
include/: as-registro.h  as-util.h  as-util.h.save  config.h  config.h.in  version.h
motor/: Makefile  Makefile.am  Makefile.in
motor/include/: as-alarma.h  as-historico.h  as-multicast.h  as-shmalarma.h  as-shmhistorico.h  as-shmtag.h  as-tags.h  as-thalarma.h  as-thtag.h  as-traza.h
motor/src/: Makefile  Makefile.am  Makefile.in  as-alarma.cpp  as-bd.cpp  as-cliente.cpp  as-datos.cpp  as-escaner.cpp  as-escritor.cpp  as-herramienta.cpp  as-historico.cpp  as-multicast.cpp  as-registrador.cpp  as-registro.cpp  as-shmalarma.cpp  as-shmhistorico.cpp  as-shmtag.cpp  as-tags.cpp  as-thalarma.cpp  as-thtag.cpp  as-trazador.cpp  as-util.cpp  myfirsthashset.cpp
scripts/: as-admin
tinyxml/: Makefile  Makefile.am  Makefile.in  tinyxml.pc  tinyxml.pc.in
tinyxml/include/: tinyxml.h
tinyxml/src/: Makefile  Makefile.am  Makefile.in
