#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT([SCADA ARGOS], [0.5], [ajpina at gmail dot com], [argos])

AC_PROG_LIBTOOL



LNAME_TAGS=as-thtag
LNAME_ALARMAS=as-thalarma
LNAME_MCAST=as-multicast
LNAME_REG=as-registro
LNAME_UTIL=as-util
LNAME_TINYXML=tinyxml

#release versioning
MAJOR_VERSION=0
MINOR_VERSION=5
MICRO_VERSION=3

#shared library versioning
LIBRARY_VERSION=1:0:0
#                       | | |
#                +------+ | +---+
#                |        |     |
#             current:revision:age
#                |        |     |
#                |        |     +- increment if interfaces have been added
#                |        |        set to zero if interfaces have been removed
#                                  or changed
#                |        +- increment if source code has changed
#                |           set to zero if current is incremented
#                +- increment if interfaces have been added, removed or changed


AC_SUBST(LIBRARY_VERSION)

PACKAGE=argos
AC_SUBST(PACKAGE)
AC_SUBST(LNAME_TAGS)
AC_SUBST(LNAME_ALARMAS)
AC_SUBST(LNAME_MCAST)
AC_SUBST(LNAME_REG)
AC_SUBST(LNAME_UTIL)
AC_SUBST(LNAME_TINYXML)

VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
RELEASE=$MAJOR_VERSION.$MINOR_VERSION
AC_SUBST(RELEASE)
AC_SUBST(VERSION)


AC_CONFIG_SRCDIR([include/version.h])
AM_CONFIG_HEADER([include/config.h])

CFLAGS=
CXXFLAGS=

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_CONDITIONAL(DEBUG, test "$enable_debug" = yes)

# Checks for programs.
AC_CHECK_TOOL(CXX, g++, g++)
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
#AC_PROG_RANLIB


# Checks for arch

case $host in
i?86-*-*)
AC_DEFINE([_i386_], [1], [Defina si tiene i386])
;;
x86_64-*-*)
AC_DEFINE([_x86_64_], [1], [Defina si tiene x86_64])
CFLAGS="$CFLAGS -fPIC"
CXXFLAGS="$CXXFLAGS -fPIC"
;;
*)
AC_DEFINE([_UNKNOW_], [1], [Defina si tiene otra arquitectura])
;;
esac


# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h \
	fcntl.h \
	float.h \
	limits.h \
	netdb.h \
	netinet/in.h \
	stddef.h \
	stdlib.h \
	string.h \
	sys/socket.h \
	sys/time.h \
	unistd.h \
	postgresql/libpq-fe.h ])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([bzero \
	ftruncate \
	gethostbyname \
	gettimeofday \
	inet_ntoa \
	memmove \
	memset \
	mkdir \
	munmap \
	pow \
	select \
	socket \
	sqrt \
	strchr \
	strerror \
	strncasecmp \
	strtol])


AC_CHECK_LIB([pq], [PQexec],
	[AC_SUBST([PGSQL_LIBS], ["-lpq $LIBS"])
		AC_SUBST([PGSQL_CFLAGS], ["-I/usr/include/postgresql"])
		AC_DEFINE([HAVE_LIBPGSQL], [1], [Defina si tiene libpq])],
	[AC_ARG_WITH([pgsql], [--with-pgsql=<path> PostgreSQL Instalacion. p.e. /usr/local o /usr/lib],
		[PGSQL_PREFIX=$with_pgsql],
		[AC_MSG_ERROR([No se encuentra PostgreSQL, se debe llamar a configure con la opcion --with-pgsql.
		p.e. --with-pgsql=/usr/lib/])]
		)
	AC_SUBST(PGSQL_PREFIX)
	AC_SUBST([PGSQL_LIBS], ["-L${PGSQL_PREFIX}/lib/postgresql -lpq"])
	AC_SUBST([PGSQL_CFLAGS], ["-I${PGSQL_PREFIX}/include/postgresql"])
	])

AC_CHECK_LIB([pthread], [pthread_create],
	[AC_DEFINE([HAVE_LIBPTHREAD], [1], [Defina si tiene pthread])],
	[AC_MSG_ERROR([Imposible compilar sin -lpthread])]
	)

AC_CHECK_LIB([rt], [shm_open],
	[AC_DEFINE([HAVE_LIBRT], [1], [Defina si tiene rt])],
	[AC_MSG_ERROR([Imposible compilar sin -lrt])]
	)

AC_CHECK_LIB([cap], [cap_get_proc],
	[AC_DEFINE([HAVE_LIBCAP], [1], [Defina si tiene capabilities])],
	[AC_MSG_ERROR([Imposible compilar sin -lcap, asegurese de tener libcap-dev])]
	)


AC_CHECK_LIB([pq], [PQexec],
	[AC_DEFINE([HAVE_LIBPGSQL], [1], [Defina si tiene libpq])],
	[AC_MSG_ERROR([Imposible compilar sin -lpq, asegurese de tener libpq-dev])]
	)

AC_CHECK_LIB([fltk], [wait],
	[AC_DEFINE([HAVE_LIBFLTK], [1], [Defina si tiene libfltk])],
	[AC_MSG_ERROR([Imposible compilar sin -lfltk, asegurese de tener libfltk-dev])]
	)

AC_CHECK_LIB([fltk_forms], [main],
	[AC_DEFINE([HAVE_LIBFLTK_FORMS], [1], [Defina si tiene libfltk_forms])],
	[AC_MSG_ERROR([Imposible compilar sin -lfltk_forms, asegurese de tener libfltk-dev])]
	)

AC_CHECK_LIB([fltk_images], [main],
	[AC_DEFINE([HAVE_LIBFLTK_IMAGES], [1], [Defina si tiene libfltk_images])],
	[AC_MSG_ERROR([Imposible compilar sin -lfltk_images, asegurese de tener libfltk-dev])]
	)

AC_CHECK_LIB([muparser], [main],
	[AC_DEFINE([HAVE_LIBMUPARSER], [1], [Defina si tiene libmuparser])],
	[AC_MSG_ERROR([Imposible compilar sin -lmuparser, asegurese de tener libmuparser-dev])]
	)

AC_CHECK_LIB([cairo], [cairo_create],
	[AC_DEFINE([HAVE_LIBCAIRO], [1], [Defina si tiene libcairo])],
	[AC_MSG_ERROR([Imposible compilar sin -lcairo, asegurese de tener libcairo-dev])]
	)

AC_CHECK_LIB([rsvg-2], [rsvg_init],
	[AC_DEFINE([HAVE_LIBRSVG-2], [1], [Defina si tiene librsvg-2])],
	[AC_MSG_ERROR([Imposible compilar sin -lrsvg-2, asegurese de tener librsvg-2-dev])]
	)

AC_CONFIG_FILES([Makefile
		tinyxml/Makefile
		tinyxml/tinyxml.pc
		tinyxml/src/Makefile
		motor/Makefile
		motor/src/Makefile
		driver/Makefile
		driver/eip_ps/Makefile
		driver/eip_ps/src/Makefile
		driver/tuxeip/Makefile
		driver/tuxeip/src/Makefile
		driver/modbus/Makefile
		driver/modbus/src/Makefile
		as-thtag.pc
		as-thalarma.pc
		as-multicast.pc
		as-registro.pc
		as-util.pc
		interfargos/Makefile
		makeinclude])
AC_OUTPUT
